--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
   <head>
     <title>Cherry Sky</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style rel="stylesheet" type="text/css">
+      .list-group-item > .badge {
+         float: right;
+      }
+    </style>
   </head>
   <body>
   <div class="container">
